[package]
name = "pallet-ocw"
version = "3.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Unlicense"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME example pallet for offchain worker"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
frame-support = {  default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }

frame-system = {  default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-core = {  default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-keystore = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "master", optional = true }
sp-io = {  default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-runtime = {  default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-std = {  default-features = false, git = "https://github.com/paritytech/substrate", branch = "master"  }

lite-json = { version = "0.1", default-features = false }
log = { version = "0.4.14", default-features = false }
pallet-authorship = {  default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-session = {  default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-application-crypto = {  default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }

[features]
default = ["std"]
std = [
	"sp-application-crypto/std",
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"lite-json/std",
	"sp-core/std",
	"sp-io/std",
	"sp-keystore",
	"sp-runtime/std",
	"sp-std/std",
	"log/std",
	"pallet-authorship/std",
	"pallet-session/std",
]
try-runtime = ["frame-support/try-runtime"]
